--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Consejos prácticos para prepararte, actuar y recuperarte antes, durante y después de un terremoto. ¡Protege a tu familia y hogar!" />
+    <meta name="description" content="Empresas de Bolivia" />
     <title>BOLIVIANA</title>
     <link rel="stylesheet" href="css\tablas.css" />
 
